customers-service/kubernetes/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service-headless
  labels:
    app: customers-service-sts
spec:
  ports:
    - port: 8080
      name: web
  clusterIP: None
  selector:
    app: customers-service-sts
