customers-service/kubernetes/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: customers-service
  name: customers-service-nodeport
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: customers-service
