customers-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: customers
    framework: spring-boot
    label1: label2
    run: customers-service
  name: customers-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: customers-service
    framework: spring-boot
  sessionAffinity: None
  type: ClusterIP
